--- a/index.html
+++ b/index.html
@@ -7,16 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="login-container">
+    <div class="left-panel"></div>
+    <div id="tracker-container">
         <h1>TV Series Tracker</h1>
-        <input type="text" id="username" placeholder="Username">
-        <input type="password" id="password" placeholder="Password">
-        <button onclick="login()">Login / Register</button>
-        <p id="message"></p>
-    </div>
-    <div id="tracker-container" style="display: none;">
-        <h1>Welcome, <span id="current-user"></span>!</h1>
-        <button onclick="logout()">Logout</button>
         <h2>Your Series</h2>
         <div id="series-list"></div>
         <h3>Add New Series</h3>
@@ -24,6 +17,8 @@
         <input type="number" id="season" placeholder="Season" min="1">
         <button onclick="addSeries()">Add Series</button>
     </div>
+    <div class="right-panel"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
